# VindJePlaats

./: .gitignore  cpu.out  go.mod  go.sum  main.go  main_test.go  mem.out  readme.md  trace.out
bag/: bag.go  geometrie.go  pand.go  verblijfsobject.go  woonplaats.go  woonplaats_test.go
bagImporter/: bagXmlSchema.go  cpu.out  importer.go  importer_test.go  ineffiecientReaderAt.go  mem.out  parseWoonplaatsenTest.xml  trace.out
geospatial/: geospatial.go  geospatial_test.go
requestHelper/: requestHelper.go
requestTesting/: requestTesting.go
website/: Cargo.toml
website/config/: configDefaults.toml
website/src/: main.rs  settings.rs
