[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#webserver
actix-web = "4"
tera = "1"
lazy_static = "1.4.0"

#config
config = "0.13.3"
serde = "1.0.163"
serde_derive = "1.0.163"